--- a/package.json
+++ b/package.json
@@ -37,5 +37,13 @@
         "prettier": "^2.8.8",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
+    },
+    "dependencies": {
+        "@fastify/helmet": "^10.1.1",
+        "@fastify/websocket": "^8.0.0",
+        "crc": "^4.3.2",
+        "dotenv": "^16.0.3",
+        "fastify": "^4.17.0",
+        "pino": "^8.14.1"
     }
 }
