--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "crc": "^4.3.2",
         "dotenv": "^16.0.3",
         "fastify": "^4.17.0",
+        "moment": "^2.29.4",
         "pino": "^8.14.1"
     }
 }
